# Feed-Forward-Neural-Network

./: .gitignore  CMakeLists.txt  README.md
ann/: CMakeLists.txt
ann/include/: ActivationFunctions.hpp  Layer.hpp  Matrix.hpp  NeuralNetwork.hpp  Neuron.hpp
ann/src/: Layer.cpp  Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp
ann/test/: ActivationFunctionsTest.cpp  MatrixTest.cpp  NeuralNetworkTest.cpp  Neuron_test.cpp
include/: Layer.hpp  Matrix.hpp  NeuralNetwork.hpp
original/: CMakeLists.txt  README.md  openann
original/include/: NeuralNetwork.hpp  Neuron.hpp
original/src/: Layer.cpp  main.cpp
refactored/: CMakeLists.txt  README.md
refactored/include/: Layer.hpp  Matrix.hpp  NeuralNetwork.hpp  Neuron.hpp
refactored/include/utils/: Math.hpp
refactored/src/: Layer.cpp  Matrix.cpp  Neuron.cpp  main.cpp
refactored/src/neural_network/: NeuralNetwork.cpp  backPropagation.cpp  feedForward.cpp  setErrors.cpp  train.cpp
refactored/src/utils/: Math.cpp
src/: Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp
